2020-11-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files)
	(tramp-handle-directory-files-and-attributes):
	* tramp-adb.el (tramp-adb-handle-directory-files-and-attributes):
	* tramp-rclone.el (tramp-rclone-handle-directory-files):
	* tramp-sh.el (tramp-sh-handle-directory-files-and-attributes):
	* tramp-smb.el (tramp-smb-handle-directory-files): Add _COUNT.

	* tramp-gvfs.el (tramp-gvfs-enabled):
	Increase `max-specpdl-size' temporarily.

2020-10-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.3 released.

2020-10-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-make-process): Accept nil COMMAND.
	(Bug#44151)

2020-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-make-process): Don't use heredoc
	script whent the argument contains a string.

2020-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-reread-directory-timeout): Make it obsolete.
	(Bug#43932)

2020-10-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-emacs-compiled-version): New defconst.
	Raise a warning, when it is not equal to the Emacs version.

2020-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.2 released.

2020-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-get-signal-strings): Add sanity check.

	* tramp-smb.el (tramp-smb-options): Change :version.

2020-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-signal-strings): Remove function.

	* tramp-adb.el (process-file-return-signal-string): Declare.
	(tramp-adb-get-signal-strings): New defun.
	(tramp-adb-handle-process-file): Use it.

	* tramp-sh.el (process-file-return-signal-string): Declare.
	(tramp-sh-get-signal-strings): New defun.
	(tramp-sh-handle-process-file): Use it.

2020-07-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-set-remote-path): Send the command in several