@@ -1,3 +1,10 @@
+2020-11-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-system-name): New defconst.
+	(tramp-default-host, tramp-restricted-shell-hosts-alist)
+	(tramp-local-host-regexp):
+	* tramp-sh.el (tramp-maybe-open-connection): Use it.  (Bug#44481)
+
 2020-11-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-directory-files)
@@ -6,6 +13,7 @@
 	* tramp-rclone.el (tramp-rclone-handle-directory-files):
 	* tramp-sh.el (tramp-sh-handle-directory-files-and-attributes):
 	* tramp-smb.el (tramp-smb-handle-directory-files): Add _COUNT.
+	Make the functions forward compatible.
 
 	* tramp-gvfs.el (tramp-gvfs-enabled):
 	Increase `max-specpdl-size' temporarily.
